monitoring/kube-prometheus-stack/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-specific
  namespace: monitoring
  labels:
    app.kubernetes.io/instance: kube-prometheus-stack
    app.kubernetes.io/name: grafana
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    pod-template-hash: 6577dd4756
    app.kubernetes.io/instance: kube-prometheus-stack
    app.kubernetes.io/name: kube-prometheus-stack
  sessionAffinity: None
  type: ClusterIP
